# cargo-npm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
src/: artifacts.rs  cli.rs  config.rs  git.rs  git_url.rs  main.rs  npm.rs  platform.rs  publish.rs  shim.js  shim_musl.js  template.rs
tests/: e2e.rs  integration.rs
tests/testenv/: mod.rs
tests/testenv/fake_npm/: .gitattributes  npm  npm.cmd  npm.ps1
